@@ -1,6 +1,7 @@
 * 2014-03-14 - thorben.betten@open-xchange.com
 
  - Fix for bug 31582: Invalidate affected users' LIST/LSUB cache on IMAP folder changes & remotely distribute this
+ - Fix for bug 31463: Enhanced login response writer to check login string against possible ACE E-Mail address; convert to IDN if so
 
 * 2014-03-14 - marc.arens@open-xchange.com
 
